--- a/evals/cross_validation.ipynb
+++ b/evals/cross_validation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "exotic-surname",
+   "id": "available-potato",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "balanced-average",
+   "id": "modified-wisconsin",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "processed-genre",
+   "id": "integral-composition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "danish-brazilian",
+   "id": "daily-mexico",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "solid-briefing",
+   "id": "greenhouse-layer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "saved-milan",
+   "id": "passive-significance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "unexpected-afghanistan",
+   "id": "terminal-phenomenon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "respected-equation",
+   "id": "lovely-qatar",
    "metadata": {
     "tags": []
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "agricultural-compiler",
+   "id": "shaped-diesel",
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "small-pilot",
+   "id": "caring-cooking",
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1850,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "forward-complexity",
+   "id": "biblical-facility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1860,7 +1860,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "direct-laundry",
+   "id": "freelance-cylinder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,7 +1871,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "massive-prairie",
+   "id": "forty-distance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1902,7 +1902,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cleared-hepatitis",
+   "id": "respiratory-there",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "other-indonesia",
+   "id": "younger-growth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1924,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "educational-samoa",
+   "id": "documentary-joyce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1934,7 +1934,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "placed-launch",
+   "id": "different-father",
    "metadata": {},
    "outputs": [
     {
@@ -2648,7 +2648,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "native-cliff",
+   "id": "immediate-choice",
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "seeing-system",
+   "id": "southeast-kingdom",
    "metadata": {},
    "outputs": [
     {
@@ -3397,7 +3397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "circular-matthew",
+   "id": "demanding-abortion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3409,10 +3409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "bound-brake",
+   "execution_count": 37,
+   "id": "reliable-nicholas",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrong alignment:  S1_18 291105 28\n",
+      "wrong alignment:  S1_18 258371 21\n",
+      "wrong alignment:  S1_18 279634 28\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -3425,7 +3434,7 @@
     {
      "data": {
       "text/plain": [
-       "{'unaligned_reads': 0, 'total_alignments': 206, 'FP': 3}"
+       "{'not_aligned_reads': 0, 'total_alignments': 206, 'FP': 3}"
       ]
      },
      "metadata": {},
@@ -3443,7 +3452,7 @@
     {
      "data": {
       "text/plain": [
-       "{'unaligned_reads': 0, 'total_alignments': 203, 'FP': 0}"
+       "{'not_aligned_reads': 0, 'total_alignments': 203, 'FP': 0}"
       ]
      },
      "metadata": {},
@@ -3451,7 +3460,7 @@
     }
    ],
    "source": [
-    "def smashed(d):\n",
+    "def smashed_dict(d):\n",
     "    L = {}\n",
     "    for loc, dist in d.items():\n",
     "        if len(L) == 0 or min([abs(int(loc)-int(x)) for x in L]) > 100:\n",
@@ -3460,7 +3469,7 @@
     "\n",
     "def cmp_ed(gt, d):\n",
     "    cnt = dict()\n",
-    "    cnt['unaligned_reads'] = 0\n",
+    "    cnt['not_aligned_reads'] = 0\n",
     "    cnt['total_alignments'] = 0\n",
     "    cnt['FP'] = 0\n",
     "    for read, s_gt in gt.items():\n",
@@ -3469,13 +3478,14 @@
     "        gt_dist = s_gt[gt_loc]\n",
     "        \n",
     "        if read not in d:\n",
-    "            cnt['unaligned_reads'] += 1\n",
+    "            cnt['not_aligned_reads'] += 1\n",
     "        else:\n",
-    "            s_d = smashed(d[read])\n",
+    "            s_d = smashed_dict(d[read])\n",
     "            for loc, dist in s_d.items():\n",
     "                cnt['total_alignments'] += 1\n",
     "                if dist > gt_dist:\n",
     "                    cnt['FP'] += 1\n",
+    "                    print('wrong alignment: ', read, loc, dist)\n",
     "    return cnt\n",
     "\n",
     "display('minimap2: ', cmp_ed(gt_ed, mm_ed))\n",
@@ -3484,8 +3494,321 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "cardiovascular-klein",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d8ce7a0fbdee4f8b8ede44133d4f0f54",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'seeds: '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'expected_reads': 20000,\n",
+       " 'not_aligned_reads': 0,\n",
+       " 'aligned_reads': 20000,\n",
+       " 'alignments': 20218,\n",
+       " 'missed_correct': 0,\n",
+       " 'FP': 0}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a8d2c8b3fc734853aaa44a03d436bfec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'minimap2: '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'expected_reads': 20000,\n",
+       " 'not_aligned_reads': 21,\n",
+       " 'aligned_reads': 19979,\n",
+       " 'alignments': 20313,\n",
+       " 'missed_correct': 1,\n",
+       " 'FP': 118}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "def smashed_set(d):\n",
+    "    L = set()\n",
+    "    for loc in d:\n",
+    "        if len(L) == 0 or min([abs(int(loc)-int(x)) for x in L]) > 100:\n",
+    "            L.add(loc)\n",
+    "    return L\n",
+    "\n",
+    "def cmp_set(gt, d):\n",
+    "    cnt = dict()\n",
+    "    cnt['expected_reads'] = 0\n",
+    "    cnt['not_aligned_reads'] = 0\n",
+    "    cnt['aligned_reads'] = 0\n",
+    "    cnt['alignments'] = 0\n",
+    "    cnt['missed_correct'] = 0\n",
+    "    cnt['FP'] = 0\n",
+    "    for read, s_gt in tqdm(gt.items()):\n",
+    "        assert(len(s_gt) == 1)\n",
+    "        gt_loc = list(s_gt)[0]\n",
+    "        cnt['expected_reads'] += 1\n",
+    "        dist_gt = -1\n",
+    "        #if cnt['expected_reads'] % 100 == 0:\n",
+    "        #    print('{:2}% '.format(100.0 * cnt['expected_reads'] / len(gt)))\n",
+    "        \n",
+    "        if read not in d:\n",
+    "            cnt['not_aligned_reads'] += 1\n",
+    "        else:\n",
+    "            cnt['aligned_reads'] += 1\n",
+    "            s_d = smashed_set(d[read])\n",
+    "            found = False\n",
+    "            \n",
+    "            for loc in s_d:\n",
+    "                if abs(gt_loc-loc) < 1500:\n",
+    "                    found = True\n",
+    "                    cnt['correct_alignments'] += 1\n",
+    "                else:\n",
+    "                    if dist_gt == -1:\n",
+    "                        t_gt = fa[gt_loc-1500:gt_loc+1500]\n",
+    "                        dist_gt = editdist_rc(fq[read], t_gt)\n",
+    "        \n",
+    "                    t_d = fa[loc-1500:loc+1500]\n",
+    "                    dist_d = editdist_rc(fq[read], t_d)\n",
+    "                    if dist_d > dist_gt:\n",
+    "                        cnt['FP'] += 1\n",
+    "                    else:\n",
+    "                        cnt['correct_alignments'] += 1\n",
+    "                cnt['alignments'] += 1\n",
+    "            if not found:\n",
+    "                cnt['missed_correct'] += 1\n",
+    "                \n",
+    "    return cnt\n",
+    "\n",
+    "n = 20000\n",
+    "gt_short = dict(list(gt.items())[0:n])\n",
+    "\n",
+    "#display(mm)\n",
+    "seeds_summary = cmp_set(gt_short, seeds)\n",
+    "display('seeds: ', seeds_summary)\n",
+    "\n",
+    "mm_summary = cmp_set(gt_short, mm)\n",
+    "display('minimap2: ', mm_summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "collaborative-latter",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'seeds:'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'reads': 20000,\n",
+       " 'not_aligned_reads': 0.0,\n",
+       " 'missed_correct': 0.0,\n",
+       " 'correct_alignments': 20218,\n",
+       " 'misalignments': 0.0}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'minimap2:'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'reads': 20000,\n",
+       " 'not_aligned_reads': 0.105,\n",
+       " 'missed_correct': 0.005,\n",
+       " 'correct_alignments': 20195,\n",
+       " 'misalignments': 0.5809087776300891}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def to_perc(d):\n",
+    "    ans = {}\n",
+    "    ans['reads'] = d['expected_reads']\n",
+    "    ans['not_aligned_reads'] = 100.0 * d['not_aligned_reads'] / d['expected_reads']\n",
+    "    ans['missed_correct'] = 100.0 * d['missed_correct'] / d['expected_reads']\n",
+    "    #ans['alignments'] = d['alignments']\n",
+    "    ans['correct_alignments'] = d['alignments'] - d['FP']\n",
+    "    ans['misalignments'] = 100.0 * d['FP'] / d['alignments']\n",
+    "    return ans\n",
+    "\n",
+    "display('seeds:',to_perc(seeds_summary))\n",
+    "display('minimap2:',to_perc(mm_summary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "respiratory-suite",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>seeds</th>\n",
+       "      <th>minimap2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>expected_reads</th>\n",
+       "      <td>20000</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>not_aligned_reads</th>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>aligned_reads</th>\n",
+       "      <td>20000</td>\n",
+       "      <td>19979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alignments</th>\n",
+       "      <td>20218</td>\n",
+       "      <td>20313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>missed_correct</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FP</th>\n",
+       "      <td>0</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   seeds  minimap2\n",
+       "expected_reads     20000     20000\n",
+       "not_aligned_reads      0        21\n",
+       "aligned_reads      20000     19979\n",
+       "alignments         20218     20313\n",
+       "missed_correct         0         1\n",
+       "FP                     0       118"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame.from_dict({'seeds': seeds_summary, 'minimap2': mm_summary})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "double-communist",
+   "id": "eligible-healing",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "forward-container",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "polish-albert",
    "metadata": {},
    "outputs": [],
    "source": []
